fixes container issue...still issue with background color not spanning beyond container on mobile

--- a/src/components/Course/styles.module.scss
+++ b/src/components/Course/styles.module.scss
@@ -88,9 +88,9 @@ $breakpoints: (
   }
 
   .details {
-    margin-left: 0;
-    margin-right: 0;
-    max-width: 100%;
+    // margin-left: 0;
+    // margin-right: 0;
+    // max-width: 100%;
   }
 
   .CourseExtras {
