--- a/src/components/Hero/Course/styles.module.scss
+++ b/src/components/Hero/Course/styles.module.scss
@@ -20,7 +20,6 @@ $breakpoints: (
 
 .intro {
   @extend .row;
-  @extend .no-gutters;
 }
 
 .colXS12 {
